--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.0.1",
     "express-ws": "^5.0.2",
     "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2"
