--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "express-ws": "^5.0.2",
+    "firebase-admin": "^12.0.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2"
